--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>511</width>
-    <height>397</height>
+    <width>581</width>
+    <height>410</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -47,6 +47,37 @@
           <property name="spacing" >
            <number>6</number>
           </property>
+          <item row="3" column="1" >
+           <widget class="QComboBox" name="m_langComboBox" >
+            <item>
+             <property name="text" >
+              <string>(en) English</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>(fr_FR) French</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="3" column="0" >
+           <widget class="QLabel" name="label" >
+            <property name="text" >
+             <string>XINX Lang :</string>
+            </property>
+            <property name="buddy" >
+             <cstring>m_langComboBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="2" >
+           <widget class="QCheckBox" name="m_saveSessionCheckBox" >
+            <property name="text" >
+             <string>Save session by default</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="0" colspan="2" >
            <widget class="QCheckBox" name="m_createBakCheckBox" >
             <property name="text" >
@@ -59,30 +90,6 @@
             <property name="text" >
              <string>Alert user when file is standard (project mode only)</string>
             </property>
-           </widget>
-          </item>
-          <item row="2" column="0" >
-           <widget class="QLabel" name="label" >
-            <property name="text" >
-             <string>XINX Lang :</string>
-            </property>
-            <property name="buddy" >
-             <cstring>m_langComboBox</cstring>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1" >
-           <widget class="QComboBox" name="m_langComboBox" >
-            <item>
-             <property name="text" >
-              <string>(en) English</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>(fr_FR) French</string>
-             </property>
-            </item>
            </widget>
           </item>
          </layout>
@@ -344,6 +351,43 @@
      </widget>
     </widget>
    </item>
+   <item row="1" column="0" colspan="2" >
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>131</width>
+         <height>31</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="okButton" >
+       <property name="text" >
+        <string>OK</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancelButton" >
+       <property name="text" >
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
    <item row="0" column="0" >
     <widget class="QListWidget" name="listWidget" >
      <property name="minimumSize" >
@@ -404,43 +448,6 @@
       </property>
      </item>
     </widget>
-   </item>
-   <item row="1" column="0" colspan="2" >
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>131</width>
-         <height>31</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
-        <string>OK</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
-        <string>Cancel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
   </layout>
  </widget>
