--- a/ui/servicesconnection.ui
+++ b/ui/servicesconnection.ui
@@ -19,40 +19,47 @@
    <property name="spacing" >
     <number>6</number>
    </property>
-   <item row="1" column="0" >
-    <widget class="QLabel" name="m_labelConnection" >
+   <item row="0" column="0" >
+    <widget class="QLabel" name="m_iconState" >
      <property name="text" >
-      <string>Send Request :</string>
+      <string/>
+     </property>
+     <property name="pixmap" >
+      <pixmap resource="../images/application.qrc" >:/network_disconnected_lan.png</pixmap>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2" >
+   <item row="3" column="0" colspan="3" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" >
       <size>
-       <width>40</width>
-       <height>20</height>
+       <width>255</width>
+       <height>27</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="1" column="1" colspan="2" >
-    <widget class="QProgressBar" name="m_sendProgressBar" >
-     <property name="value" >
-      <number>24</number>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
+   <item row="0" column="1" colspan="3" >
+    <widget class="QLabel" name="m_labelState" >
+     <property name="text" >
+      <string>Connection ....</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" >
+   <item row="3" column="3" >
     <widget class="QPushButton" name="m_abortPushButton" >
      <property name="text" >
       <string>Abort</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QLabel" name="m_labelConnection" >
+     <property name="text" >
+      <string>Send Request :</string>
      </property>
     </widget>
    </item>
@@ -63,7 +70,17 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2" >
+   <item row="1" column="1" colspan="3" >
+    <widget class="QProgressBar" name="m_sendProgressBar" >
+     <property name="value" >
+      <number>24</number>
+     </property>
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="3" >
     <widget class="QProgressBar" name="m_recieveProgressBar" >
      <property name="value" >
       <number>24</number>
@@ -73,15 +90,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="3" >
-    <widget class="QLabel" name="m_labelState" >
-     <property name="text" >
-      <string>Connection ....</string>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../images/application.qrc" />
+ </resources>
  <connections/>
 </ui>
