--- a/images/application.qrc
+++ b/images/application.qrc
@@ -1,21 +1,18 @@
 <RCC>
     <qresource prefix="/" >
-        <file>CVpublic_meth.png</file>
-        <file>CVpublic_slot.png</file>
-        <file>CVpublic_var.png</file>
-        <file>CVstruct.png</file>
-        <file>Chtml_balise.png</file>
-        <file>Chtml_template.png</file>
-        <file>Chtml_value.png</file>
-        <file>Desktop.png</file>
-        <file>ajouter.png</file>
-        <file>bug.png</file>
-        <file>dbgmemview.png</file>
-        <file>doc.png</file>
+        <file>1downarrow.png</file>
+        <file>1uparrow.png</file>
+        <file>action.png</file>
+        <file>add.png</file>
+        <file>balise.png</file>
+        <file>colors.png</file>
+        <file>desktop.png</file>
+        <file>down.png</file>
+        <file>edit.png</file>
         <file>editcopy.png</file>
         <file>editcut.png</file>
+        <file>editdelete.png</file>
         <file>editpaste.png</file>
-        <file>exec.png</file>
         <file>exit.png</file>
         <file>fileclose.png</file>
         <file>filenew.png</file>
@@ -26,24 +23,41 @@
         <file>filesaveas.png</file>
         <file>find.png</file>
         <file>firefox_logo.png</file>
-        <file>folder_config128.png</file>
-        <file>folder_config_48.png</file>
-        <file>folder_fost.png</file>
+        <file>folder.png</file>
+        <file>fontsizedown.png</file>
+        <file>fontsizeup.png</file>
         <file>france.png</file>
         <file>germany.png</file>
+        <file>html_value.png</file>
         <file>ie_logo.png</file>
+        <file>import.png</file>
         <file>italy.png</file>
-        <file>next.png</file>
-        <file>nogood.png</file>
+        <file>network_connected_lan.png</file>
+        <file>network_disconnected_lan.png</file>
+        <file>network_incoming_lan.png</file>
+        <file>network_outgoing_lan.png</file>
+        <file>noeud.png</file>
         <file>portugal.png</file>
-        <file>previous.png</file>
+        <file>project_open.png</file>
         <file>redo.png</file>
-        <file>resume.png</file>
+        <file>reload.png</file>
+        <file>remove.png</file>
+        <file>run.png</file>
+        <file>serviceparam.png</file>
+        <file>services.png</file>
         <file>spain.png</file>
         <file>splash.png</file>
-        <file>supprimer.png</file>
+        <file>style.png</file>
+        <file>template.png</file>
+        <file>typefws.png</file>
+        <file>typejs.png</file>
+        <file>typeunknown.png</file>
+        <file>typexml.png</file>
+        <file>typexsl.png</file>
         <file>undo.png</file>
+        <file>up.png</file>
         <file>usa.png</file>
-        <file>wrap.png</file>
+        <file>variable.png</file>
+        <file>window_new.png</file>
     </qresource>
 </RCC>
