--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -12,15 +12,15 @@
   <property name="windowTitle" >
    <string>Customize</string>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QVBoxLayout" >
    <property name="margin" >
     <number>9</number>
    </property>
    <property name="spacing" >
     <number>6</number>
    </property>
-   <item row="0" column="1" >
-    <widget class="QStackedWidget" name="stackedWidget" >
+   <item>
+    <widget class="QTabWidget" name="tabWidget" >
      <property name="enabled" >
       <bool>true</bool>
      </property>
@@ -28,6 +28,12 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="page" >
+      <attribute name="title" >
+       <string>Preference</string>
+      </attribute>
+      <attribute name="icon" >
+       <iconset resource="../images/application.qrc" >:/desktop.png</iconset>
+      </attribute>
       <layout class="QVBoxLayout" >
        <property name="margin" >
         <number>9</number>
@@ -111,6 +117,12 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page_2" >
+      <attribute name="title" >
+       <string>Custom path</string>
+      </attribute>
+      <attribute name="icon" >
+       <iconset resource="../images/application.qrc" >:/folder.png</iconset>
+      </attribute>
       <layout class="QVBoxLayout" >
        <property name="margin" >
         <number>9</number>
@@ -234,6 +246,12 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page_3" >
+      <attribute name="title" >
+       <string>Editor</string>
+      </attribute>
+      <attribute name="icon" >
+       <iconset resource="../images/application.qrc" >:/style.png</iconset>
+      </attribute>
       <layout class="QVBoxLayout" >
        <property name="margin" >
         <number>9</number>
@@ -351,7 +369,7 @@
      </widget>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2" >
+   <item>
     <layout class="QHBoxLayout" >
      <property name="margin" >
       <number>0</number>
@@ -387,67 +405,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="0" column="0" >
-    <widget class="QListWidget" name="listWidget" >
-     <property name="minimumSize" >
-      <size>
-       <width>128</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize" >
-      <size>
-       <width>128</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="iconSize" >
-      <size>
-       <width>70</width>
-       <height>70</height>
-      </size>
-     </property>
-     <property name="movement" >
-      <enum>QListView::Static</enum>
-     </property>
-     <property name="spacing" >
-      <number>12</number>
-     </property>
-     <property name="viewMode" >
-      <enum>QListView::IconMode</enum>
-     </property>
-     <property name="wordWrap" >
-      <bool>true</bool>
-     </property>
-     <property name="currentRow" >
-      <number>0</number>
-     </property>
-     <item>
-      <property name="text" >
-       <string>Preference</string>
-      </property>
-      <property name="icon" >
-       <iconset resource="../images/application.qrc" >:/folder_config128.png</iconset>
-      </property>
-     </item>
-     <item>
-      <property name="text" >
-       <string>Custom path</string>
-      </property>
-      <property name="icon" >
-       <iconset resource="../images/application.qrc" >:/folder_fost.png</iconset>
-      </property>
-     </item>
-     <item>
-      <property name="text" >
-       <string>Editor</string>
-      </property>
-      <property name="icon" >
-       <iconset resource="../images/application.qrc" >:/Desktop.png</iconset>
-      </property>
-     </item>
-    </widget>
    </item>
   </layout>
  </widget>
@@ -491,22 +448,6 @@
     <hint type="destinationlabel" >
      <x>179</x>
      <y>282</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>listWidget</sender>
-   <signal>currentRowChanged(int)</signal>
-   <receiver>stackedWidget</receiver>
-   <slot>setCurrentIndex(int)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>55</x>
-     <y>109</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>223</x>
-     <y>136</y>
     </hint>
    </hints>
   </connection>
