--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -252,6 +252,9 @@
         <property name="text" >
          <string>Delete link</string>
         </property>
+        <property name="icon" >
+         <iconset resource="../images/application.qrc" >:/remove.png</iconset>
+        </property>
        </widget>
       </item>
       <item row="0" column="1" >
@@ -266,6 +269,9 @@
         </property>
         <property name="text" >
          <string>Add link</string>
+        </property>
+        <property name="icon" >
+         <iconset resource="../images/application.qrc" >:/add.png</iconset>
         </property>
        </widget>
       </item>
