On avance sur le fonctionnement de CVS

--- a/ui/about.ui
+++ b/ui/about.ui
@@ -87,7 +87,7 @@ p, li { white-space: pre-wrap; }
    <item row="1" column="1" >
     <widget class="QLabel" name="m_versionLabel" >
      <property name="text" >
-      <string>Version 0.6-6</string>
+      <string>Version 0.6.7</string>
      </property>
     </widget>
    </item>
