--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -34,7 +34,7 @@
      <x>0</x>
      <y>0</y>
      <width>668</width>
-     <height>19</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="m_helpMenu" >
@@ -249,20 +249,83 @@
       <number>0</number>
      </property>
      <property name="spacing" >
-      <number>6</number>
+      <number>0</number>
      </property>
-     <item row="0" column="1" >
-      <widget class="QLineEdit" name="m_filtreLineEdit" />
+     <item row="2" column="0" colspan="2" >
+      <widget class="QTreeView" name="m_projectDirectoryTreeView" />
      </item>
-     <item row="0" column="0" >
+     <item row="1" column="0" >
       <widget class="QLabel" name="label" >
        <property name="text" >
         <string>Filtre :</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2" >
-      <widget class="QTreeView" name="m_projectDirectoryTreeView" />
+     <item row="0" column="0" colspan="2" >
+      <layout class="QHBoxLayout" >
+       <property name="margin" >
+        <number>0</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QToolButton" name="m_updateProjectBtn" >
+         <property name="text" >
+          <string>Update project</string>
+         </property>
+         <property name="icon" >
+          <iconset resource="../images/application.qrc" >:/kdesvnupdate.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="m_commitProjectBtn" >
+         <property name="text" >
+          <string>Commit project</string>
+         </property>
+         <property name="icon" >
+          <iconset resource="../images/application.qrc" >:/kdesvncommit.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="m_addFileToProjectBtn" >
+         <property name="text" >
+          <string>Add file(s) to project</string>
+         </property>
+         <property name="icon" >
+          <iconset resource="../images/application.qrc" >:/kdesvnadd.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="m_deleteFileFromProject" >
+         <property name="text" >
+          <string>Delete file(s) from project</string>
+         </property>
+         <property name="icon" >
+          <iconset resource="../images/application.qrc" >:/kdesvndelete.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>141</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item row="1" column="1" >
+      <widget class="QLineEdit" name="m_filtreLineEdit" />
      </item>
     </layout>
    </widget>
