--- a/images/application.qrc
+++ b/images/application.qrc
@@ -5,6 +5,8 @@
         <file>action.png</file>
         <file>add.png</file>
         <file>balise.png</file>
+        <file>button_cancel.png</file>
+        <file>button_ok.png</file>
         <file>colors.png</file>
         <file>desktop.png</file>
         <file>down.png</file>
