--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -59,10 +59,16 @@
              <property name="text" >
               <string>(en) English</string>
              </property>
+             <property name="icon" >
+              <iconset resource="../images/application.qrc" >:/usa.png</iconset>
+             </property>
             </item>
             <item>
              <property name="text" >
               <string>(fr_FR) French</string>
+             </property>
+             <property name="icon" >
+              <iconset resource="../images/application.qrc" >:/france.png</iconset>
              </property>
             </item>
            </widget>
@@ -118,7 +124,7 @@
      </widget>
      <widget class="QWidget" name="page_2" >
       <attribute name="title" >
-       <string>Custom path</string>
+       <string>Path</string>
       </attribute>
       <attribute name="icon" >
        <iconset resource="../images/application.qrc" >:/folder.png</iconset>
@@ -231,17 +237,59 @@
         </widget>
        </item>
        <item>
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
+        <widget class="QGroupBox" name="groupBox_5" >
+         <property name="title" >
+          <string>Tools</string>
          </property>
-         <property name="sizeHint" >
-          <size>
-           <width>20</width>
-           <height>181</height>
-          </size>
-         </property>
-        </spacer>
+         <layout class="QVBoxLayout" >
+          <property name="margin" >
+           <number>9</number>
+          </property>
+          <property name="spacing" >
+           <number>6</number>
+          </property>
+          <item>
+           <layout class="QHBoxLayout" >
+            <property name="margin" >
+             <number>0</number>
+            </property>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="label_7" >
+              <property name="text" >
+               <string>CVS : </string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="m_CVSToolsLineEdit" />
+            </item>
+            <item>
+             <widget class="QToolButton" name="m_cvsToolButton" >
+              <property name="text" >
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" >
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -395,12 +443,18 @@
        <property name="text" >
         <string>OK</string>
        </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/button_ok.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="cancelButton" >
        <property name="text" >
         <string>Cancel</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/button_cancel.png</iconset>
        </property>
       </widget>
      </item>
