--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>568</width>
-    <height>516</height>
+    <height>542</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -31,13 +31,32 @@
       <property name="spacing" >
        <number>6</number>
       </property>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="label_8" >
+      <item row="4" column="1" >
+       <widget class="QComboBox" name="m_projectRCSComboBox" >
+        <item>
+         <property name="text" >
+          <string>&lt;No RCS></string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>CVS</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>SubVersion</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="4" column="0" >
+       <widget class="QLabel" name="label_9" >
         <property name="text" >
-         <string>Project &amp;Version :</string>
+         <string>Project &amp;RCS :</string>
         </property>
         <property name="buddy" >
-         <cstring>m_projectVersionCombo</cstring>
+         <cstring>m_projectRCSComboBox</cstring>
         </property>
        </widget>
       </item>
@@ -65,6 +84,49 @@
         </item>
        </widget>
       </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_7" >
+        <property name="text" >
+         <string>Project &amp;Type :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectTypeCombo</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Project &amp;Directory :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label_6" >
+        <property name="text" >
+         <string>Project &amp;Name :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_nameLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="m_projectLineEdit" />
+      </item>
+      <item row="1" column="2" >
+       <widget class="QToolButton" name="m_projectButton" >
+        <property name="text" >
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="1" >
        <widget class="QComboBox" name="m_projectTypeCombo" >
         <item>
@@ -79,46 +141,13 @@
         </item>
        </widget>
       </item>
-      <item row="1" column="2" >
-       <widget class="QToolButton" name="m_projectButton" >
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_8" >
         <property name="text" >
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="m_projectLineEdit" />
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label_6" >
-        <property name="text" >
-         <string>Project &amp;Name :</string>
+         <string>Project &amp;Version :</string>
         </property>
         <property name="buddy" >
-         <cstring>m_nameLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>Project &amp;Directory :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_7" >
-        <property name="text" >
-         <string>Project &amp;Type :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectTypeCombo</cstring>
+         <cstring>m_projectVersionCombo</cstring>
         </property>
        </widget>
       </item>
@@ -358,12 +387,18 @@
        <property name="text" >
         <string>OK</string>
        </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/button_ok.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="cancelButton" >
        <property name="text" >
         <string>Cancel</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/button_cancel.png</iconset>
        </property>
       </widget>
      </item>
@@ -399,8 +434,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>474</x>
-     <y>502</y>
+     <x>476</x>
+     <y>527</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -416,7 +451,7 @@
    <hints>
     <hint type="sourcelabel" >
      <x>557</x>
-     <y>502</y>
+     <y>527</y>
     </hint>
     <hint type="destinationlabel" >
      <x>179</x>
