--- a/ui/rcslogform.ui
+++ b/ui/rcslogform.ui
@@ -1,16 +1,16 @@
 <ui version="4.0" >
- <class>ServiceResultDialog</class>
- <widget class="QDialog" name="ServiceResultDialog" >
+ <class>RCSLogDialog</class>
+ <widget class="QDialog" name="RCSLogDialog" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>546</width>
-    <height>487</height>
+    <width>452</width>
+    <height>324</height>
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Result</string>
+   <string>RCS Log</string>
   </property>
   <layout class="QVBoxLayout" >
    <property name="margin" >
@@ -22,7 +22,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox" >
      <property name="title" >
-      <string>Input Stream</string>
+      <string>RCS Log</string>
      </property>
      <layout class="QGridLayout" >
       <property name="margin" >
@@ -32,33 +32,7 @@
        <number>6</number>
       </property>
       <item row="0" column="0" >
-       <widget class="QTextEdit" name="m_inputStreamTextEdit" >
-        <property name="readOnly" >
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox_2" >
-     <property name="title" >
-      <string>Output Stream</string>
-     </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <item row="0" column="0" >
-       <widget class="QTextEdit" name="m_outputStreamTextEdit" >
-        <property name="readOnly" >
-         <bool>true</bool>
-        </property>
-       </widget>
+       <widget class="QListWidget" name="m_rcsLogListWidget" />
       </item>
      </layout>
     </widget>
@@ -78,14 +52,14 @@
        </property>
        <property name="sizeHint" >
         <size>
-         <width>131</width>
-         <height>31</height>
+         <width>321</width>
+         <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
+      <widget class="QPushButton" name="m_closeButton" >
        <property name="text" >
         <string>&amp;Close</string>
        </property>
@@ -103,18 +77,18 @@
  </resources>
  <connections>
   <connection>
-   <sender>okButton</sender>
+   <sender>m_closeButton</sender>
    <signal>clicked()</signal>
-   <receiver>ServiceResultDialog</receiver>
+   <receiver>RCSLogDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>278</x>
-     <y>253</y>
+     <x>412</x>
+     <y>297</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>96</x>
-     <y>254</y>
+     <x>185</x>
+     <y>296</y>
     </hint>
    </hints>
   </connection>
