--- a/ui/replace.ui
+++ b/ui/replace.ui
@@ -249,12 +249,18 @@
        <property name="text" >
         <string>Find</string>
        </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/find.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="m_closeButton" >
        <property name="text" >
         <string>Close</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="../images/application.qrc" >:/button_cancel.png</iconset>
        </property>
       </widget>
      </item>
