--- a/ui/servicesconnection.ui
+++ b/ui/servicesconnection.ui
@@ -54,6 +54,9 @@
      <property name="text" >
       <string>Abort</string>
      </property>
+     <property name="icon" >
+      <iconset resource="../images/application.qrc" >:/button_cancel.png</iconset>
+     </property>
     </widget>
    </item>
    <item row="1" column="0" >
