--- a/images/application.qrc
+++ b/images/application.qrc
@@ -7,6 +7,7 @@
         <file>balise.png</file>
         <file>button_cancel.png</file>
         <file>button_ok.png</file>
+        <file>warning.png</file>
         <file>colors.png</file>
         <file>desktop.png</file>
         <file>down.png</file>
