--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -53,7 +53,7 @@
           <property name="spacing" >
            <number>6</number>
           </property>
-          <item row="3" column="1" >
+          <item row="4" column="1" >
            <widget class="QComboBox" name="m_langComboBox" >
             <item>
              <property name="text" >
@@ -73,13 +73,20 @@
             </item>
            </widget>
           </item>
-          <item row="3" column="0" >
+          <item row="4" column="0" >
            <widget class="QLabel" name="label" >
             <property name="text" >
              <string>XINX Lang :</string>
             </property>
             <property name="buddy" >
              <cstring>m_langComboBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" colspan="2" >
+           <widget class="QCheckBox" name="m_popupWhenFileModifiedCheckBox" >
+            <property name="text" >
+             <string>&amp;Popup when file modifed</string>
             </property>
            </widget>
           </item>
