--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -429,6 +429,138 @@
       <attribute name="icon" >
        <iconset resource="../images/application.qrc" >:/cervisia.png</iconset>
       </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <layout class="QGridLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item row="1" column="1" >
+          <widget class="QComboBox" name="m_cvsCompressionComboBox" >
+           <item>
+            <property name="text" >
+             <string>-z0 Disabled </string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z1 Low level</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z2</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z3</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z4</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z5 Medium Level</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z6</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z7</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z8</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>-z9 High level</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item row="1" column="0" >
+          <widget class="QLabel" name="label_9" >
+           <property name="text" >
+            <string>Compression:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0" colspan="2" >
+          <widget class="QCheckBox" name="m_cvsPruneCheckBox" >
+           <property name="text" >
+            <string>Prune empty directories. (-P)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" >
+          <widget class="QComboBox" name="m_cvsVerboseComboBox" >
+           <item>
+            <property name="text" >
+             <string>Very Quiet (-Q)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>Discret (-q)</string>
+            </property>
+           </item>
+           <item>
+            <property name="text" >
+             <string>Verbose</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item row="3" column="0" colspan="2" >
+          <widget class="QCheckBox" name="m_cvsCreateDirCheckBox" >
+           <property name="text" >
+            <string>Create any directories that exist in the repository if they're missing from the working directory. (-d)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0" >
+          <widget class="QLabel" name="label_8" >
+           <property name="text" >
+            <string>Progress message: </string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
