--- a/images/application.qrc
+++ b/images/application.qrc
@@ -26,6 +26,7 @@
         <file>filesaveas.png</file>
         <file>find.png</file>
         <file>firefox_logo.png</file>
+        <file>flatlist.png</file>
         <file>folder.png</file>
         <file>fontsizedown.png</file>
         <file>fontsizeup.png</file>
