--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -21,7 +21,7 @@
      <number>0</number>
     </property>
     <property name="spacing" >
-     <number>6</number>
+     <number>0</number>
     </property>
     <item row="0" column="0" >
      <widget class="TabEditor" name="m_tabEditors" />
@@ -34,7 +34,7 @@
      <x>0</x>
      <y>0</y>
      <width>668</width>
-     <height>19</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="m_helpMenu" >
@@ -243,24 +243,14 @@
     <number>1</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_2" >
-    <layout class="QGridLayout" >
+    <layout class="QVBoxLayout" >
      <property name="margin" >
       <number>0</number>
      </property>
      <property name="spacing" >
       <number>0</number>
      </property>
-     <item row="2" column="0" colspan="2" >
-      <widget class="QTreeView" name="m_projectDirectoryTreeView" />
-     </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Filtre :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0" colspan="2" >
+     <item>
       <layout class="QHBoxLayout" >
        <property name="margin" >
         <number>0</number>
@@ -321,10 +311,30 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QToolButton" name="m_flatListBtn" >
+         <property name="icon" >
+          <iconset resource="../images/application.qrc" >:/flatlist.png</iconset>
+         </property>
+         <property name="checkable" >
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
-     <item row="1" column="1" >
+     <item>
+      <widget class="QLabel" name="label" >
+       <property name="text" >
+        <string>Filtre :</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QLineEdit" name="m_filtreLineEdit" />
+     </item>
+     <item>
+      <widget class="QTreeView" name="m_projectDirectoryTreeView" />
      </item>
     </layout>
    </widget>
